# booking-bot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  full_pipeline.md  learnings.md  project_specs.md  prompts.md  pyproject.toml
bot/: callbacks.py  config.py  main.py  models.py  states.py
bot/handlers/: admin.py  booking.py  my_bookings.py  reminders.py  start.py  vip.py
bot/keyboards/: inline.py  reply.py
bot/services/: calendar.py  phone.py  scheduler.py  sheets.py  slots.py  whisper.py
docs/: architecture.md  loom-script.md
docs/screenshots/: README.md
secrets/: README.md
tests/: conftest.py  test_admin_guard.py  test_booking_states.py  test_calendar_cache.py  test_cancellation_order.py  test_config.py  test_keyboards.py  test_models_parsing.py  test_phone.py  test_reminders.py  test_slots.py  test_vip.py  test_whisper.py
