[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "booking-bot"
version = "0.1.0"
description = "Telegram booking bot — aiogram 3 + APScheduler 4 + Google Sheets/Calendar + Groq Whisper"
requires-python = ">=3.11"
dependencies = [
  "aiogram==3.27.0",
  "apscheduler==4.0.0a6",
  "cbor2==6.1.1",
  "sqlalchemy==2.0.36",
  "aiosqlite==0.20.0",
  "gspread==6.2.1",
  "google-api-python-client==2.151.0",
  "google-auth==2.36.0",
  "groq==0.13.0",
  "pydantic==2.9.2",
  "pydantic-settings==2.7.0",
  "aiohttp==3.10.10",
]

[project.optional-dependencies]
dev = [
  "ruff==0.7.0",
  "mypy==1.13.0",
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
]

[tool.setuptools.packages.find]
include = ["bot*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
